# cornerstone-haskell

./: .dir-locals.el  .gitignore  README.md  cornerstone-haskell.cabal  tests
src/: Main.hs  Parse.hs  Pass.hs  Texp.hs
test/: Test.hs  TestUtil.hs
